--- a/index.html
+++ b/index.html
@@ -1,67 +1,111 @@
-<!DOCTYPE HTML><html><head><meta charset="UTF-8"><title>AquaMeter BLE</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<style>
-body{font-family:-apple-system,sans-serif;background:#f0f4f8;margin:0;padding:0;color:#2c3e50;text-align:center}
-.card{max-width:450px;margin:10px auto;background:#fff;padding:20px;border-radius:20px;box-shadow:0 10px 25px rgba(0,0,0,0.1)}
-.tabs{display:flex;background:#eee;border-radius:12px;margin-bottom:20px;overflow:hidden}
-.tab-btn{flex:1;padding:12px;border:none;background:#eee;cursor:pointer;font-weight:bold}
-.tab-btn.active{background:#2196f3;color:#fff}
-.tab-content{display:none}.tab-content.active{display:block}
-#v-lit{font-size:2.8rem;font-weight:800;color:#2196f3;line-height:1;margin:10px 0;display:block}
-.unit{font-size:0.9rem;color:#7f8c8d;font-weight:bold;margin-bottom:15px;display:block}
-.prog-bg{background:#eee;border-radius:10px;height:35px;position:relative;overflow:hidden;margin:15px 0;border:1px solid #ddd}
-.prog-bar{background:#2196f3;height:100%;width:0%;transition:0.8s ease-in-out}
-.prog-text{position:absolute;width:100%;top:7px;font-weight:bold;font-size:1.1rem;color:#000;z-index:2;left:0;text-align:center}
-.action-box{background:#f8f9fa;padding:15px;border-radius:15px;margin-top:10px;border:1px solid #f0f0f0}
-button{width:100%;padding:14px;border:none;border-radius:12px;font-weight:bold;cursor:pointer;font-size:1rem;transition:0.2s}
-.btn-blue{background:#2196f3;color:white}.btn-green{background:#2ecc71;color:white}.btn-orange{background:#f39c12;color:white}
-#conn-status{font-size:12px;margin-bottom:10px;color:#e74c3c}
-</style></head>
-<body><div class="card">
-    <div id="conn-status">Disconnected 🔴</div>
-    <button id="btn-conn" class="btn-blue" onclick="connect()">CONNECT TO AQUAMETER</button>
-    <hr style="opacity:0.1;margin:15px 0">
+<!DOCTYPE HTML><html>
+<head>
+  <meta charset="UTF-8"><title>AquaMeter Pro BLE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <style>
+    body { font-family: -apple-system, sans-serif; background: #f0f4f8; margin: 0; padding: 0; color: #2c3e50; text-align: center; }
+    .card { max-width: 450px; margin: 10px auto; background: #fff; padding: 20px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
+    .tabs { display: flex; background: #eee; border-radius: 12px; margin-bottom: 20px; overflow: hidden; }
+    .tab-btn { flex: 1; padding: 12px; border: none; background: #eee; cursor: pointer; font-weight: bold; }
+    .tab-btn.active { background: #2196f3; color: #fff; }
+    .tab-content { display: none; } .tab-content.active { display: block; }
+    #v-lit { font-size: 2.8rem; font-weight: 800; color: #2196f3; line-height: 1; margin: 10px 0; display: block; }
+    .unit { font-size: 0.9rem; color: #7f8c8d; font-weight: bold; margin-bottom: 15px; display: block; }
+    .prog-bg { background: #eee; border-radius: 10px; height: 35px; position: relative; overflow: hidden; margin: 15px 0; border: 1px solid #ddd; }
+    .prog-bar { background: #2196f3; height: 100%; width: 0%; transition: 0.8s ease-in-out; }
+    .prog-text { position: absolute; width: 100%; top: 7px; font-weight: bold; font-size: 1.1rem; color: #000; z-index: 2; left:0; text-align:center; }
+    .action-box { background: #f8f9fa; padding: 15px; border-radius: 15px; margin-top: 10px; border: 1px solid #f0f0f0; }
+    button { width: 100%; padding: 14px; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; font-size: 1rem; transition: 0.2s; }
+    .btn-blue { background: #2196f3; color: white; margin-bottom: 10px; }
+    .btn-green { background: #2ecc71; color: white; }
+    .btn-orange { background: #f39c12; color: white; }
+    .btn-gray { background: #95a5a6; color: white; }
+    .ver-info { margin-top: 30px; font-size: 12px; color: #bdc3c7; border-top: 1px dashed #eee; padding-top: 15px; }
+    #status { font-size: 12px; margin-bottom: 10px; font-weight: bold; }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <div id="status" style="color:#e74c3c;">DISCONNECTED 🔴</div>
+    <button id="btn-connect" class="btn-blue" onclick="connect()">CONNECT TO AQUAMETER</button>
+
     <div class="tabs">
-      <button class="tab-btn active" onclick="openTab('main',this)">DASH</button>
-      <button class="tab-btn" onclick="openTab('sett',this)">⚙️</button>
+      <button class="tab-btn active" id="t-dash" onclick="openTab('main', this)">DASH</button>
+      <button class="tab-btn" id="t-sett" onclick="openTab('sett', this)">⚙️</button>
     </div>
+
     <div id="main" class="tab-content active">
-      <span id="v-lit">0.00</span><span class="unit">LITROS RESTANTES</span>
-      <div class="prog-bg"><div id="bar" class="prog-bar"></div><div id="perc" class="prog-text">0%</div></div>
-      <button class="btn-green" onclick="send('FULL')">DEPÓSITO CHEIO</button>
+      <span id="v-lit">0.00</span><span class="unit" id="l-rem">ЛИТРОВ ОСТАЛОСЬ</span>
+      <div class="prog-bg"><div id="bar" class="prog-bar"></div><div id="perc" class="prog-text">0.00%</div></div>
+      <div class="action-box">
+        <button class="btn-green" id="btn-ful" onclick="if(confirm(i18n[curLang].qFull)) send('FULL')">ПОЛНЫЙ БАК</button>
+      </div>
     </div>
-    <div id="sett" class="tab-content">
-      <button class="btn-orange" onclick="send('CAL_START')">START CALIBRATION</button>
-      <button class="btn-green" style="margin-top:10px" onclick="send('CAL_STOP')">STOP (1L)</button>
+
+    <div id="sett" class="tab-content" style="text-align:left">
+      <p style="font-size: 12px; color: #888;">Settings are managed on the device. Calibration:</p>
+      <button class="btn-orange" id="btn-clb" onclick="send('CAL_START')">КАЛИБРОВКА 1 ЛИТР</button>
+      <div id="cal-box" style="display:none; background:#fff3cd; padding:15px; border-radius:15px; margin-top:10px; text-align:center">
+        <span id="l-pul">ИМПУЛЬСОВ:</span> <span id="cal-p" style="font-weight:bold;">0</span>
+        <button class="btn-green" style="margin-top:10px" onclick="send('CAL_STOP')">ГОТОВО (1Л)</button>
+      </div>
+      <div class="ver-info">Firmware v2.0 BLE | <a href="http://aquameter.pt">www.aquameter.pt</a></div>
     </div>
-</div>
-<script>
-let charTX, charRX;
-async function connect() {
-  try {
-    const device = await navigator.bluetooth.requestDevice({
-      filters: [{name: 'AquaMeter_Pro'}],
-      optionalServices: ['6e400001-b5a3-f393-e0a9-e50e24dcca9e']
-    });
-    const server = await device.gatt.connect();
-    const service = await server.getPrimaryService('6e400001-b5a3-f393-e0a9-e50e24dcca9e');
-    charRX = await service.getCharacteristic('6e400002-b5a3-f393-e0a9-e50e24dcca9e');
-    charTX = await service.getCharacteristic('6e400003-b5a3-f393-e0a9-e50e24dcca9e');
-    await charTX.startNotifications();
-    charTX.addEventListener('characteristicvaluechanged', (e) => {
-      const val = new TextDecoder().decode(e.target.value).split('|');
-      document.getElementById('v-lit').innerText = val[0];
-      let p = (parseFloat(val[0])/parseFloat(val[1])*100);
-      document.getElementById('perc').innerText = p.toFixed(1) + "%";
-      document.getElementById('bar').style.width = p + "%";
-    });
-    document.getElementById('conn-status').innerText = "Connected 🟢";
-    document.getElementById('btn-conn').style.display = 'none';
-  } catch(e) { alert(e); }
-}
-async function send(msg) {
-  if(!charRX) return;
-  await charRX.writeValue(new TextEncoder().encode(msg));
-}
-function openTab(id,btn){document.querySelectorAll('.tab-content').forEach(c=>c.classList.remove('active'));document.getElementById(id).classList.add('active');}
-</script></body></html>
+  </div>
+
+  <script>
+    const i18n = {
+      0: { dash:"СТАТУС", rem:"ОСТАЛОСЬ (Л)", ful:"ПОЛНЫЙ БАК", qFull:"Установить полный бак?" },
+      1: { dash:"STATUS", rem:"LITERS LEFT", ful:"FULL TANK", qFull:"Set tank to full?" },
+      2: { dash:"ESTADO", rem:"RESTANTES", ful:"DEPÓSITO CHEIO", qFull:"Definir depósito cheio?" }
+    };
+    let curLang = 2;
+    let charRX, charTX;
+
+    const openTab = (id, btn) => {
+      document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
+      document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+      btn.classList.add('active');
+    };
+
+    async function connect() {
+      try {
+        const device = await navigator.bluetooth.requestDevice({
+          filters: [{ name: 'AquaMeter_Pro' }],
+          optionalServices: ['6e400001-b5a3-f393-e0a9-e50e24dcca9e']
+        });
+        const server = await device.gatt.connect();
+        const service = await server.getPrimaryService('6e400001-b5a3-f393-e0a9-e50e24dcca9e');
+        charRX = await service.getCharacteristic('6e400002-b5a3-f393-e0a9-e50e24dcca9e');
+        charTX = await service.getCharacteristic('6e400003-b5a3-f393-e0a9-e50e24dcca9e');
+        
+        await charTX.startNotifications();
+        charTX.addEventListener('characteristicvaluechanged', (e) => {
+          const raw = new TextDecoder().decode(e.target.value);
+          const d = raw.split('|'); // curr|max|low|flow|today|isCal|pulses|lang
+          curLang = parseInt(d[7]);
+          document.getElementById('v-lit').innerText = d[0];
+          let p = (parseFloat(d[0]) / parseFloat(d[1]) * 100);
+          document.getElementById('perc').innerText = p.toFixed(1) + "%";
+          document.getElementById('bar').style.width = (p > 100 ? 100 : p) + "%";
+          document.getElementById('bar').style.background = (parseFloat(d[0]) <= parseFloat(d[2])) ? "#e74c3c" : "#2196f3";
+          if(d[5] === "1") {
+             document.getElementById('cal-box').style.display = 'block';
+             document.getElementById('cal-p').innerText = d[6];
+          } else { document.getElementById('cal-box').style.display = 'none'; }
+        });
+
+        document.getElementById('status').innerText = "CONNECTED 🟢";
+        document.getElementById('status').style.color = "#2ecc71";
+        document.getElementById('btn-connect').style.display = "none";
+      } catch (err) { alert("Error: " + err); }
+    }
+
+    async function send(msg) {
+      if(!charRX) return;
+      await charRX.writeValue(new TextEncoder().encode(msg));
+    }
+  </script>
+</body>
+</html>
