--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML><html>
 <head>
-  <meta charset="UTF-8"><title>AquaMeter Pro BLE</title>
+  <meta charset="UTF-8"><title>AquaMeter Pro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <style>
     body { font-family: -apple-system, sans-serif; background: #f0f4f8; margin: 0; padding: 0; color: #2c3e50; text-align: center; }
@@ -9,64 +9,70 @@
     .tab-btn { flex: 1; padding: 12px; border: none; background: #eee; cursor: pointer; font-weight: bold; }
     .tab-btn.active { background: #2196f3; color: #fff; }
     .tab-content { display: none; } .tab-content.active { display: block; }
-    #v-lit { font-size: 2.8rem; font-weight: 800; color: #2196f3; line-height: 1; margin: 10px 0; display: block; }
-    .unit { font-size: 0.9rem; color: #7f8c8d; font-weight: bold; margin-bottom: 15px; display: block; }
+    #v-lit { font-size: 2.8rem; font-weight: 800; color: #2196f3; margin: 10px 0; display: block; }
     .prog-bg { background: #eee; border-radius: 10px; height: 35px; position: relative; overflow: hidden; margin: 15px 0; border: 1px solid #ddd; }
-    .prog-bar { background: #2196f3; height: 100%; width: 0%; transition: 0.8s ease-in-out; }
-    .prog-text { position: absolute; width: 100%; top: 7px; font-weight: bold; font-size: 1.1rem; color: #000; z-index: 2; left:0; text-align:center; }
-    .action-box { background: #f8f9fa; padding: 15px; border-radius: 15px; margin-top: 10px; border: 1px solid #f0f0f0; }
-    button { width: 100%; padding: 14px; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; font-size: 1rem; transition: 0.2s; }
-    .btn-blue { background: #2196f3; color: white; margin-bottom: 10px; }
-    .btn-green { background: #2ecc71; color: white; }
-    .btn-orange { background: #f39c12; color: white; }
-    .btn-gray { background: #95a5a6; color: white; }
-    .ver-info { margin-top: 30px; font-size: 12px; color: #bdc3c7; border-top: 1px dashed #eee; padding-top: 15px; }
-    #status { font-size: 12px; margin-bottom: 10px; font-weight: bold; }
+    .prog-bar { background: #2196f3; height: 100%; width: 0%; transition: 0.8s; }
+    .prog-text { position: absolute; width: 100%; top: 7px; font-weight: bold; font-size: 1.1rem; color: #000; left:0; text-align:center; }
+    .data-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 15px; }
+    .data-item { background: #f8f9fa; padding: 12px; border-radius: 15px; border: 1px solid #eee; }
+    .label { font-size: 0.75rem; color: #888; text-transform: uppercase; font-weight: bold; }
+    .btn-blue { background: #2196f3; color: white; margin-bottom: 10px; width: 100%; }
+    .btn-green { background: #2ecc71; color: white; width: 100%; }
+    .btn-orange { background: #f39c12; color: white; width: 100%; }
+    svg { background: #fcfcfc; border-radius: 15px; width: 100%; height: 200px; margin-top: 10px; }
+    .bar-svg { fill: #2196f3; rx: 3; }
   </style>
 </head>
 <body>
   <div class="card">
-    <div id="status" style="color:#e74c3c;">DISCONNECTED 🔴</div>
-    <button id="btn-connect" class="btn-blue" onclick="connect()">CONNECT TO AQUAMETER</button>
+    <div id="status" style="color:#e74c3c; font-size: 12px; margin-bottom: 5px;">DISCONNECTED 🔴</div>
+    <button id="btn-connect" class="btn-blue" onclick="connect()">CONNECT AQUAMETER</button>
 
     <div class="tabs">
-      <button class="tab-btn active" id="t-dash" onclick="openTab('main', this)">DASH</button>
-      <button class="tab-btn" id="t-sett" onclick="openTab('sett', this)">⚙️</button>
+      <button class="tab-btn active" onclick="openTab('main', this)">DASH</button>
+      <button class="tab-btn" onclick="openTab('hist', this)">HIST</button>
+      <button class="tab-btn" onclick="openTab('sett', this)">⚙️</button>
     </div>
 
     <div id="main" class="tab-content active">
-      <span id="v-lit">0.00</span><span class="unit" id="l-rem">ЛИТРОВ ОСТАЛОСЬ</span>
+      <span id="v-lit">0.00</span><span class="label" id="l-rem">ЛИТРОВ ОСТАЛОСЬ</span>
       <div class="prog-bg"><div id="bar" class="prog-bar"></div><div id="perc" class="prog-text">0.00%</div></div>
-      <div class="action-box">
-        <button class="btn-green" id="btn-ful" onclick="if(confirm(i18n[curLang].qFull)) send('FULL')">ПОЛНЫЙ БАК</button>
+      <div class="data-grid">
+        <div class="data-item"><span class="label" id="l-tod">СЕГОДНЯ</span><br><span id="use" style="font-weight:bold">0.0</span> L</div>
+        <div class="data-item"><span class="label" id="l-flo">ПОТОК</span><br><span id="flow" style="font-weight:bold">0.0</span> l/m</div>
       </div>
+      <button class="btn-green" id="btn-ful" onclick="if(confirm(i18n[curLang].qFull)) send('FULL')">ПОЛНЫЙ БАК</button>
     </div>
 
-    <div id="sett" class="tab-content" style="text-align:left">
-      <p style="font-size: 12px; color: #888;">Settings are managed on the device. Calibration:</p>
-      <button class="btn-orange" id="btn-clb" onclick="send('CAL_START')">КАЛИБРОВКА 1 ЛИТР</button>
-      <div id="cal-box" style="display:none; background:#fff3cd; padding:15px; border-radius:15px; margin-top:10px; text-align:center">
-        <span id="l-pul">ИМПУЛЬСОВ:</span> <span id="cal-p" style="font-weight:bold;">0</span>
-        <button class="btn-green" style="margin-top:10px" onclick="send('CAL_STOP')">ГОТОВО (1Л)</button>
+    <div id="hist" class="tab-content">
+      <h3 id="l-h7">РАСХОД (7 ДНЕЙ)</h3>
+      <svg id="svg-graph" viewBox="0 0 350 200"></svg>
+    </div>
+
+    <div id="sett" class="tab-content">
+      <button class="btn-orange" onclick="send('CAL_START')">START CALIBRATION (1L)</button>
+      <div id="cal-box" style="display:none; background:#fff3cd; padding:15px; border-radius:15px; margin-top:10px;">
+        ИМПУЛЬСОВ: <span id="cal-p" style="font-weight:bold">0</span>
+        <button class="btn-green" style="margin-top:10px" onclick="send('CAL_STOP')">DONE (1L)</button>
       </div>
-      <div class="ver-info">Firmware v2.0 BLE | <a href="http://aquameter.pt">www.aquameter.pt</a></div>
+      <div style="margin-top:20px; font-size:12px; color:#bdc3c7">Firmware v2.0 BLE | aquameter.pt</div>
     </div>
   </div>
 
   <script>
     const i18n = {
-      0: { dash:"СТАТУС", rem:"ОСТАЛОСЬ (Л)", ful:"ПОЛНЫЙ БАК", qFull:"Установить полный бак?" },
-      1: { dash:"STATUS", rem:"LITERS LEFT", ful:"FULL TANK", qFull:"Set tank to full?" },
-      2: { dash:"ESTADO", rem:"RESTANTES", ful:"DEPÓSITO CHEIO", qFull:"Definir depósito cheio?" }
+      0: { rem:"ОСТАЛОСЬ", tod:"СЕГОДНЯ", flo:"ПОТОК", ful:"ПОЛНЫЙ БАК", qFull:"Установить полный бак?", days:['Вс','Пн','Вт','Ср','Чт','Пт','Сб'] },
+      1: { rem:"LEFT", tod:"TODAY", flo:"FLOW", ful:"FULL TANK", qFull:"Set full?", days:['Sun','Mon','Tue','Wed','Thu','Fri','Sat'] },
+      2: { rem:"RESTANTES", tod:"HOJE", flo:"CAUDAL", ful:"CHEIO", qFull:"Definir cheio?", days:['Dom','Seg','Ter','Qua','Qui','Sex','Sáb'] }
     };
-    let curLang = 2;
-    let charRX, charTX;
+    let curLang = 2, charRX, charTX, hData = [0,0,0,0,0,0,0];
 
     const openTab = (id, btn) => {
       document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
       document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
       document.getElementById(id).classList.add('active');
       btn.classList.add('active');
+      if(id === 'hist') drawGraph();
     };
 
     async function connect() {
@@ -82,10 +88,11 @@
         
         await charTX.startNotifications();
         charTX.addEventListener('characteristicvaluechanged', (e) => {
-          const raw = new TextDecoder().decode(e.target.value);
-          const d = raw.split('|'); // curr|max|low|flow|today|isCal|pulses|lang
-          curLang = parseInt(d[7]);
+          const d = new TextDecoder().decode(e.target.value).split('|');
+          curLang = parseInt(d[7]); const l = i18n[curLang];
           document.getElementById('v-lit').innerText = d[0];
+          document.getElementById('use').innerText = d[4];
+          document.getElementById('flow').innerText = d[3];
           let p = (parseFloat(d[0]) / parseFloat(d[1]) * 100);
           document.getElementById('perc').innerText = p.toFixed(1) + "%";
           document.getElementById('bar').style.width = (p > 100 ? 100 : p) + "%";
@@ -94,17 +101,28 @@
              document.getElementById('cal-box').style.display = 'block';
              document.getElementById('cal-p').innerText = d[6];
           } else { document.getElementById('cal-box').style.display = 'none'; }
+          hData = d[8].split(',').map(Number);
         });
-
+        send("SYNC " + new Date().getDay());
         document.getElementById('status').innerText = "CONNECTED 🟢";
-        document.getElementById('status').style.color = "#2ecc71";
         document.getElementById('btn-connect').style.display = "none";
-      } catch (err) { alert("Error: " + err); }
+      } catch (err) { console.log(err); }
     }
 
     async function send(msg) {
       if(!charRX) return;
       await charRX.writeValue(new TextEncoder().encode(msg));
+    }
+
+    function drawGraph() {
+      const svg = document.getElementById('svg-graph'); const maxV = Math.max(...hData, 5); const l = i18n[curLang]; let html = '';
+      for(let i=0; i<7; i++) {
+        let h = (hData[i] / maxV) * 150; let x = 10 + (i * 48);
+        html += `<rect x="${x}" y="${170-h}" width="35" height="${h}" class="bar-svg" />`;
+        html += `<text x="${x+2}" y="190" style="font-size:11px; fill:#7f8c8d">${l.days[i]}</text>`;
+        html += `<text x="${x}" y="${165-h}" style="font-size:10px; font-weight:bold">${hData[i].toFixed(1)}</text>`;
+      }
+      svg.innerHTML = html;
     }
   </script>
 </body>
